<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.GuardarTarea">

    <TextView
        android:id="@+id/txNuevaTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/NuevaTarea"
        android:textSize="30sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TituloDeTarea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/NombreDeTarea">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DescripcionDeNuevaTarea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/DescripcionDeNuevaTarea">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="1dp"
            android:layout_weight="1.5">

            <AutoCompleteTextView
                android:id="@+id/EstadoDeTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/EstadoDeTarea">

            </AutoCompleteTextView>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="1dp"
            android:layout_weight="1.5">

            <AutoCompleteTextView
                android:id="@+id/PrioridadDeTarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PrioridadDeTarea">

            </AutoCompleteTextView>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtnDeEntregaDeTarea"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_gravity="start"
        android:layout_marginHorizontal="20dp"
        android:backgroundTint="@color/azulin"
        android:drawableEnd="@drawable/vc_calendario"
        android:text="@string/FechaDeEntrega">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/BtnDeSalvarTarea"
        android:layout_width="374dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:backgroundTint="@color/verdecito"
        android:text="@string/GuardarTarea" />

    <ProgressBar
        android:id="@+id/cargandoTarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>