<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.IniciarSesion">

    <LinearLayout
        android:id="@+id/VerDatosDeAcceso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            app:srcCompat="@mipmap/ticktask_logo_round" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/MsjDeIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/IniciarEnTickTask"
            android:textAlignment="center"
            android:textColor="#4CAF50"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/EtqDeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vc_escribir"
            android:ems="10"
            android:hint="@string/emailDeUsuario"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/EdtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ClaveDeUsuario"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <Button
            android:id="@+id/BtnDeInicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="Inicio"
            android:text="@string/iniciarSesion"
            android:textStyle="bold"
            app:cornerRadius="7dp"
            android:backgroundTint="@color/verdecito"/>

        <ProgressBar
            android:id="@+id/cargandoInicio"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/VerRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/MensajeDeRecuperarClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="30dp"
                android:text="@string/recuperarClave"
                android:textAlignment="center"
                android:textColor="@color/azulito"
                android:textSize="14sp"
                android:textStyle="bold"
                />


                <Button
                    android:id="@+id/BtnDeRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="54dp"
                    android:layout_weight="1"
                    android:text="@string/registrarUsuario"
                    android:textAlignment="viewStart"
                    android:textStyle="bold"
                    app:cornerRadius="7dp"
                    app:icon="@drawable/vc_registro"
                    android:backgroundTint="@color/azulito"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>