<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemsTarea"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/TareaIncompleta"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="estadoIncompleto"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/vc_icompleto" />

        <ImageButton
            android:id="@+id/TareaCompletada"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/white"
            android:contentDescription="estadoCompletado"
            android:scaleX="1.2"
            android:scaleY="1.2"
            android:src="@drawable/vc_tic" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TituloDeTarea"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:textSize="22dp"
                android:text="@string/TituloDeTarea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/DescripcionDeTarea"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/DescripcionDeTarea"
                    android:textColor="@color/black"
                    android:textSize="18dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="2.5dp">

                        <AutoCompleteTextView
                            android:id="@+id/Estado"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:hint="@string/EstadoDeTarea" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_weight="1"
                        android:layout_marginStart="2.5dp"
                        android:layout_marginEnd="5dp">

                        <AutoCompleteTextView
                            android:id="@+id/Prioridad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:hint="@string/PrioridadDeTarea" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BtnDeEntrega"
                    android:layout_width="156dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:backgroundTint="@color/azulin"
                    android:drawableEnd="@drawable/vc_calendario"
                    android:textSize="14dp"
                    android:text="@string/FechaDeEntrega" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
