<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.Registro">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logoTickTask"
            android:layout_width="match_parent"
            android:layout_height="143dp"
            app:srcCompat="@mipmap/ticktask_logo_round" />

        <TextView
            android:id="@+id/tvEstasListo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuListaDeTareas"
            android:textAlignment="center"
            android:textColor="#03A9F4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vc_escribir"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/NombreDeUsuario" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <EditText
            android:id="@+id/txApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vc_escribir"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/ApellidoDeUsuario"
            android:textAlignment="viewStart" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/etxEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vc_email"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#040404" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/etxMovil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/vc_movil"
            android:ems="10"
            android:hint="Móvil"
            android:inputType="phone"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/etxClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Clave"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/etcClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Repetir clave"
            android:inputType="textPassword"
            android:minHeight="48dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <Button
                android:id="@+id/btnUnirme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Iniciar"
                android:backgroundTint="@color/verdecito"
                android:textAlignment="center"
                android:textStyle="bold" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <ProgressBar
                android:id="@+id/cargandoRegistro"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>